--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1,7 +1,32 @@
 name: web-app-workflow
-on: push
+on: 
+  push:
+    branches:
+      - main
+      - dev
+      - feature/*
+
+env:
+  MONGO_DB_NAME: gha-demo
+  MONGO_URL: ${{ secrets.MONGO_URL }}
 jobs:
+  lint:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Get code
+        uses: actions/checkout@v3
+      - name: Load & cache dependencies
+        id: cache-deps
+        uses: ./.github/actions/cached-deps
+        with:
+          caching: "false"
+      - name: Output info
+        run: echo "Cache used? ${{ steps.cache-deps.outputs.used-cache }}"
+      - name: Lint
+        run: npm run lint
+
   build:
+    environment: dev
     runs-on: ubuntu-latest
     outputs:
       script-file: ${{ steps.publish.outputs.script-file }}
@@ -12,6 +37,11 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: "20"
+      - name: cache-dependencies
+        uses: actions/cache@v2
+        with:
+          path: ~/.npm
+          key: deps-node-modules-${{ hashFiles('**/package-lock.json') }}
       - name: Install dependencies
         run: npm ci
       - name: Test
