--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -61,6 +61,10 @@ jobs:
   deploy:
     needs: build
     runs-on: ubuntu-latest
+    # for open id permission
+    permissions:
+      id-token: write
+      contents: read
     steps:
       - name: Get build artifacts
         uses: actions/download-artifact@v3
@@ -70,6 +74,11 @@ jobs:
         run: ls
       - name: output filename
         run: echo "${{ needs.build.outputs.script-file}}"
+      - name: Get AWS permissions
+        uses: aws-actions/configure-aws-credentials@v2
+        with:
+          role-to-assume: arn:aws:iam::486122642263:role/github-demo
+          aws-region: us-east-1
       - name: Deploy
         uses: ./.github/actions/deploy-s3-js
         with:
